Prevent search results horizontal scrolling and overflow

--- a/source/wp-content/themes/wporg-developer/scss/main.scss
+++ b/source/wp-content/themes/wporg-developer/scss/main.scss
@@ -1686,6 +1686,7 @@ a.screen-reader-text:focus,
 		}
 
 		.site-title {
+			margin-right: 20px;
 
 			@media screen and (max-width: 500px) {
 				margin-bottom: 2rem;
@@ -2911,8 +2912,13 @@ button.code-tab.is-active {
 	}
 
 	&.search-wrap-inline .search-field {
+		width: calc(100vw - 60px);
 		margin: 0;
 		border: none;
+
+		@media ( min-width: 501px ) {
+			width: 100%;
+		}
 	}
 
 	&.search-wrap-embedded .search-field {
